# MyRasterizer

./: .gitignore  CMakeLists.txt  OBJ_Loader.h  README.md  sdlapp.h
bak/: main.cpp  rasterizerApp.h
bak/src/: canvas.h
src/: testdata.h
